# geotrave

./: .clauderules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  StreamlitUi.py  docker-compose.db.yml  docker-compose.yml  main.py  pyproject.toml  test_ui.py
.github/workflows/: Agent-node-test.yml  base-test.yml  cd-db.yml  cd.yml
database/postgis/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
database/postgis/osm_data/: .gitignore
database/postgis/scripts/: 02-views.sql  03-indexes.sql  04-topology.sql
doc/: DEVELOPER.md  STASH.md
docs/: DOCKER.md  EVAL.md  PLAN.md  STASH.md
script/: demo_crawler.py  run_eval.ps1  run_eval.sh  run_ui.ps1  set.ps1
src/: main.py
src/agent/: factory.py  graph.py  router.py  rules.py  schema.py  state.py
src/agent/nodes/: analyzer.py  filter.py  researcher.py
src/agent/nodes/analyst/: __init__.py  config.py  node.py
src/agent/nodes/analyzer/: analyzer.py
src/agent/state/: __init__.py  schema.py  state.py
src/api/: chat.py  rag.py  routes.py  schema.py
src/crawler/: __init__.py  fetcher.py  parser.py  schema.py
src/database/: Spatial_DB_Spec.md  retrieval_db.py  vector_db.py
src/database/checkpointer/: __init__.py  sqlite.py
src/database/postgis/: Spatial_DB_Spec.md  __init__.py  config.py  connection.py
src/database/vector_db/: __init__.py  manager.py  provider.py  service.py
src/utils/: __init__.py  config.py  llm_factory.py  logger.py  prompt.py
test/: README.md  TEST_MANIFEST.md  conftest.py  test_api_endpoints.py  test_concurrency.py  test_ui.py
test/e2e/: test_agent_workflow.py  test_quality_filter.py
test/eval/: analyzer_dataset.json  dataset.json  evaluator.py  test_agent_workflow.py
test/eval/data/: router_scenarios.json
test/integration/: test_api.py  test_concurrency.py  test_graph_workflow.py  test_spatial_tools.py
test/mock/llm_responses/: researchplans.json
test/mock/tool_outputs/: research_tools.json
test/unit/: test_api_schemas.py  test_crawler.py  test_nodes.py  test_prompts.py  test_tools.py  test_utils.py
test/unit/agent/: test_graph_routing.py  test_user_selections.py
test/unit/nodes/: test_analyzer.py  test_researcher.py  test_router.py
(+60 files in other folders)
