[project]
name = "geotrave"
version = "0.1.0"
description = "Real-time tourism planning engine based on multi-agent collaboration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.12.1",
    "deepeval>=3.9.5",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.3",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.4",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.42.0",
]
